# vending-machine

./: .gitignore  Readme.md  docker-compose.yml  pyproject.toml  vending_machine.thrift
config/: service-config.json
gen-cpp/: BeveragePreferenceService.cpp  BeveragePreferenceService.h
nginx_reverse_proxy/lua-scripts/api/beverageservice/: order.lua
script/: generate_request.sh  output.txt
src/BeveragePreferenceService/: BeveragePreferenceHandler.h  BeveragePreferenceService.cpp  CMakeLists.txt
src/OrderBeverageService/: OrderBeverageHandler.h
src/WeatherService/: WeatherHandler.h
src/sparkjobs/: __init__.py  cli.py  config.py  exceptions.py  io.py  iot_sort.py  logging_utils.py  pagerank.py  spark.py
